# models/user_basic.go
@@ -3,27 +3,41 @@ package models
 import (
 	"Gin-Chat/utils"
 	"fmt"
+
 	"gorm.io/gorm"
 )
 
 type UserBasic struct {
 	gorm.Model
-	Identity      string `json:"identity,omitempty"`
-	Name          string `json:"name,omitempty"`
-	PassWord      string `json:"pass_word,omitempty"`
-	Phone         string `json:"phone,omitempty"`
-	Email         string `json:"email,omitempty"`
-	ClientIp      string `json:"client_ip,omitempty"`
-	ClientPort    string `json:"client_port,omitempty"`
-	LoginTime     uint64 `json:"login_time,omitempty"`
-	HeartBeatTime uint64 `json:"heart_beat_time,omitempty"`
-	LoginOutTime  uint64 `json:"login_out_time,omitempty"`
-	IsLoginOut    bool   `json:"is_login_out,omitempty"`
-	DeviceInfo    string `json:"device_info,omitempty"`
+	Identity      string
+	Name          string
+	PassWord      string
+	Phone         string `valid:"matches(^1[3-9]{1}\\d{9}$)"`
+	Email         string
+	ClientIp      string
+	ClientPort    string
+	LoginTime     uint64
+	HeartBeatTime uint64
+	LoginOutTime  uint64
+	IsLoginOut    bool
+	DeviceInfo    string
+	Salt          string
 }
 
 func (table *UserBasic) TableName() string {
 	return "user_basic" // 数据库里表的命名
+}
+
+func CreateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Create(&user)
+}
+
+func DeleteUser(user UserBasic) *gorm.DB {
+	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord, Phone: user.Phone})
 }
 
 func GetUserList() []*UserBasic {
@@ -35,6 +49,27 @@ func GetUserList() []*UserBasic {
 	return data
 }
 
-func CreateUser(user UserBasic) *gorm.DB {
-	return utils.DB.Create(&user)
+func FindUserByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+
+func FindUserByPhone(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ?", phone).First(&user)
+	return user
+}
+
+func FindUserByEmail(email string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("email = ?", email).First(&user)
+	return user
+}
+
+// Login 登录
+func Login(name, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and pass_word = ?", name, password).First(&user)
+	return user
 }
